# quickviz

./: .clang-format  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  TODO.md  conanfile.py  imgui.ini  ingestion_bench_report.json  profile_canvas_performance.cpp  vcpkg.json
sample/: CMakeLists.txt  conanfile.txt  sample_cairo_canvas.cpp
sample/editor/: CMakeLists.txt  README.md  editor_state.cpp  editor_state.hpp  editor_viewport.cpp  editor_viewport.hpp  main.cpp
sample/editor/commands/: command.hpp  command_stack.cpp  command_stack.hpp  delete_points_command.cpp  delete_points_command.hpp
sample/editor/panels/: editor_tool_panel.cpp  editor_tool_panel.hpp  history_panel.cpp  history_panel.hpp
sample/object_management/: CMakeLists.txt  bridge_control_panel.cpp  bridge_control_panel.hpp  bridge_scene_manager.cpp  bridge_scene_manager.hpp  main.cpp
sample/pointcloud_viewer/: CMakeLists.txt  interactive_scene_manager.cpp  interactive_scene_manager.hpp  main.cpp  point_cloud_info_panel.cpp  point_cloud_info_panel.hpp  point_cloud_tool_panel.cpp  point_cloud_tool_panel.hpp
sample/quickstart/: CMakeLists.txt  README.md  main.cpp
sample/quickviz_demo_app/: CMakeLists.txt  main.cpp  quickviz_application.cpp  quickviz_application.hpp
sample/quickviz_demo_app/panels/: config_panel.cpp  config_panel.hpp  console_panel.cpp  console_panel.hpp  main_docking_panel.cpp  main_docking_panel.hpp  menu_bar.hpp  scene_panel.cpp  scene_panel.hpp
sample/streaming_demo/: CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt
src/app/: CMakeLists.txt  app_quickviz.cpp  data_reader.cpp  data_reader.hpp  main.cpp  quickviz_application.cpp  quickviz_application.hpp
src/app/component/: log_processor.cpp  log_processor.hpp
src/app/panels/: config_panel.cpp  config_panel.hpp  console_panel.cpp  console_panel.hpp  main_docking_panel.cpp  main_docking_panel.hpp  menu_bar.cpp  scene_panel.cpp  scene_panel.hpp
src/canvas/: CMakeLists.txt
src/canvas/src/: cairo_canvas.cpp  cairo_context.cpp  cairo_draw.cpp  cairo_widget.cpp  data_buffer.cpp  im_canvas.cpp  imcanvas.cpp  plot_buffer.cpp  viewer_base.cpp  window.cpp
src/canvas/test/: CMakeLists.txt  test_cairo.cpp  test_cairo_canvas.cpp  test_cairo_context.cpp  test_cairo_draw.cpp  test_cairo_normalize.cpp  test_cairo_widget.cpp  test_canvas.cpp  test_ccanvas.cpp  test_im_canvas.cpp  test_plot_buffer.cpp  test_viewer.cpp  test_window.cpp
src/core/: CMakeLists.txt
src/core/src/: demo.cpp
src/core/test/: CMakeLists.txt  test_async_event.cpp  test_double_buffer.cpp  test_event.cpp  test_ring_buffer.cpp
src/cvdraw/: CMakeLists.txt
src/cvdraw/src/: color_maps.cpp  cv_canvas.cpp  cv_colors.cpp  cv_io.cpp
src/cvdraw/test/: CMakeLists.txt  test_cv_canvas.cpp  test_cv_drawfunc.cpp  test_cv_drawmode.cpp  test_image_rw.cpp
src/gldraw/: CMakeLists.txt
src/gldraw/src/: camera.cpp  camera_controller.cpp  font_renderer.cpp  frame_buffer.cpp  gl_scene_manager.cpp  gl_scene_panel.cpp  gl_view.cpp  gl_viewer.cpp  gpu_selection.cpp  scene_input_handler.cpp  scene_manager.cpp  scene_view_panel.cpp  selection_manager.cpp  shader.cpp  shader_program.cpp
src/gldraw/test/: CMakeLists.txt  test_arrow.cpp  test_bounding_box.cpp  test_camera.cpp  test_camera_enhanced.cpp  test_camera_raw.cpp  test_canvas_st.cpp  test_coordinate_system.cpp  test_cylinder.cpp  test_font_renderer.cpp  test_framebuffer.cpp  test_frustum.cpp  test_gpu_selection_simple.cpp  test_grid.cpp  test_layer_system.cpp  test_layer_system_box.cpp  test_layer_system_demo.cpp  test_line_strip.cpp  test_mesh.cpp  test_nav_map_rendering.cpp  test_object_selection.cpp  test_pcd.cpp  test_pcd_with_selection.cpp  test_pcl_bridge.cpp  test_pcl_loader_render.cpp  test_pcl_selector.cpp  test_point_cloud_buffer_strategies.cpp  test_point_cloud_realtime.cpp  test_primitive_drawing.cpp  test_shader.cpp  test_sphere.cpp  test_text3d.cpp  test_text3d_minimal.cpp  test_texture.cpp  test_visualization_contracts.cpp
src/image/: CMakeLists.txt
src/image/src/: buffered_cv_image_widget.cpp  color_maps.cpp  cv_canvas.cpp  cv_colors.cpp  cv_image_widget.cpp  cv_io.cpp
src/image/test/: CMakeLists.txt  test_buffered_cv_image_widget.cpp  test_cv_canvas.cpp  test_cv_drawfunc.cpp  test_cv_drawmode.cpp  test_cv_image_widget.cpp  test_image_rw.cpp
src/imcore/: CMakeLists.txt
src/imcore/sample/: CMakeLists.txt  implot_sample.cpp  imtui_sample.cpp
src/imview/: CMakeLists.txt
src/imview/src/: box.cpp  cairo_context.cpp  cairo_draw.cpp  cairo_widget.cpp  data_buffer.cpp  event_dispatcher.cpp  fonts.cpp  gl_layer.cpp  im_panel.cpp  layer.cpp  opengl_capability_checker.cpp  panel.cpp  popup.cpp  popup_manager.cpp  resizable_ui_node.cpp  scene_object.cpp  ui_panel.cpp  viewer.cpp  viewer_base.cpp  window.cpp  yoga_utils.hpp
src/imview/test/: CMakeLists.txt  test_async_event.cpp  test_box.cpp  test_box_inside_box.cpp  test_cairo_context.cpp  test_cairo_draw.cpp  test_cairo_normalize.cpp  test_cairo_widget.cpp  test_camera.cpp  test_double_buffer.cpp  test_event.cpp  test_framebuffer.cpp  test_grid.cpp  test_opengl.cpp  test_panel.cpp  test_plot_buffer.cpp  test_point_cloud_buffer_strategies.cpp  test_ring_buffer.cpp  test_shader.cpp  test_viewer.cpp  test_viewer_fonts.cpp  test_window.cpp  test_window_gl_triangle.cpp
src/pcl_bridge/: CMakeLists.txt
src/plot/: CMakeLists.txt
src/plotter/: CMakeLists.txt
src/renderer/: CMakeLists.txt
src/sample/: CMakeLists.txt
src/scene/: CMakeLists.txt
src/scenegraph/: CMakeLists.txt
src/viewer/: CMakeLists.txt
src/visualization/: CMakeLists.txt  REFACTORING_PLAN.md
src/vscene/: CMakeLists.txt  INTERFACE_DESIGN.md
src/widget/: CMakeLists.txt
tests/: CMakeLists.txt  README.md  valgrind.supp
tests/benchmarks/: benchmark_rendering.cpp  profile_canvas_performance.cpp
tests/integration/: test_imview_integration.cpp  test_renderer_pipeline.cpp  test_viewer_integration.cpp
tests/memory/: test_memory_leaks.cpp
tests/unit/: test_buffer_registry.cpp  test_event_system.cpp  test_geometric_primitive_types.cpp
(+835 files in other folders)
